--- a/package.json
+++ b/package.json
@@ -30,10 +30,15 @@
     "lodash": "~1.3.1",
     "mongoose": "~3.6.2",
     "mongoose-validator": "~0.2.1",
-    "validator": "~1.3.0"
+    "validator": "~1.3.0",
+    "nodelogger": "https://github.com/mccormicka/nodelogger/archive/master.tar.gz"
   },
   "devDependencies": {
     "mockgoose": "0.0.13",
-    "jasmine-node": "~1.10.2"
+    "jasmine-node": "~1.10.2",
+    "grunt": "0.4.1",
+    "grunt-contrib-watch": "0.3.1",
+    "grunt-contrib-jshint": "0.4.3",
+    "grunt-jasmine-node": "~0.1.0"
   }
 }
