--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "devDependencies": {
     "mockgoose": "0.0.13",
-    "jasmine-node": "~1.10.2",
+    "jasmine-node": "https://github.com/mccormicka/jasmine-node/archive/exclusive-tests.tar.gz",
     "grunt": "0.4.1",
     "grunt-contrib-watch": "0.3.1",
     "grunt-contrib-jshint": "0.4.3",
